--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "author": "Rafael Sanches <fucazu@gmail.com>",
   "license": "MIT",
   "scripts": {
-      "start": "node index",
-      "dev": "nodemon index"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "dependencies": {
+    "cors": "^2.8.1",
     "eslint": "^3.10.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
-    "handlebars": "^4.0.6"
+    "handlebars": "^4.0.6",
+    "socket.io": "^1.6.0"
   }
 }
